--- a/webspyders.html
+++ b/webspyders.html
@@ -259,7 +259,7 @@
 
 <div class="container">
 
-<div class="row row-cols-1 row-cols-md-2 g-4 my-5">
+<div class="row row-cols-1 row-cols-3 g-4 my-5">
   <div class="col">
     <div class="card">
       <img src="pexels-pixabay-38544.jpg" class="card-img-top" alt="..." >
@@ -293,6 +293,24 @@
       <div class="card-body">
         <h5 class="card-title">Website Building</h5>
         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+      </div>
+    </div>
+  </div>
+	  <div class="col">
+    <div class="card">
+      <img src="24770171_104.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Virtual Reality</h5>
+        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+      </div>
+    </div>
+  </div>
+   <div class="col">
+    <div class="card">
+      <img src="pexels-pixabay-38544.jpg" class="card-img-top" alt="..." >
+      <div class="card-body">
+        <h5 class="card-title">Offline Assignment</h5>
+        <p class="card-text">We are here to assign you the work which you would find better to learn and do it anywyas</p>
       </div>
     </div>
   </div>
